--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <div class="container">
             <div class="infos">
                 <h6 class="subtitle">hello,I'm</h6>
-                <h6 class="title">James Smith</h6>
-                <p>UI/UX Designer</p>
+                <h6 class="title">Yeonwoo Jang</h6>
+                <p>Roboticist/Engineer</p>
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">HIRE ME</button>
