--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
         <div class="container text-center">
             <h6 class="subtitle">Service</h6>
             <h6 class="section-title mb-4">What I Do</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">See what I am interested in and what I have done.</p>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-crown"></i>
-                            <h5>UI/UX Design</h5>
+                            <h5>Soft Robotics</h5>
                         </div>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-desktop"></i>
-                            <h5>Web Design</h5>
+                            <h5>ROS2</h5>
                         </div>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-mobile"></i>
-                            <h5>App Design</h5>
+                            <h5>Game Development</h5>
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-bar-chart"></i>
-                            <h5>SEO</h5>
+                            <h5>App Design </h5>
                         </div>
                     </div>
                 </div>
@@ -221,56 +221,6 @@
     </section>
     <!-- End of portfolio section -->
 
-    <!-- Testmonial Section -->
-    <section id="testmonial" class="section">
-        <div class="container text-center">
-            <h6 class="subtitle">Testmonial</h6>
-            <h6 class="section-title mb-4">What People Say About Me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
-
-
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="card testmonial-card border">
-                            <div class="card-body">
-                                <img src="assets/imgs/avatar-1.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum voluptates in enim vel amet?</p>
-                                <h1 class="title">Emma Re</h1>
-                                <h1 class="subtitle">Graphic Designer</h1>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card testmonial-card border">
-                            <div class="card-body">
-                                <img src="assets/imgs/avatar-2.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum voluptates in enim vel amet?</p>
-                                <h1 class="title">James Bert</h1>
-                                <h1 class="subtitle">Web Designer</h1>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card testmonial-card border">
-                            <div class="card-body">
-                                <img src="assets/imgs/avatar-3.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum voluptates in enim vel amet?</p>
-                                <h1 class="title">Michael Abra</h1>
-                                <h1 class="subtitle">Web Developer</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End of testmonial section -->
 
     <!-- Blog Section -->
     <section id="blog" class="section">
@@ -337,10 +287,10 @@
                     <div class="row align-items-center">
                         <div class="col-sm-9 text-center text-sm-left">
                             <h5 class="mt-3">Hire Me For Your Project</h5>
-                            <p class="mb-3">Accusantium labore nostrum similique quisquam.</p>
+                            <p class="mb-3">Looking forward to working with you.</p>
                         </div>
                         <div class="col-sm-3 text-center text-sm-right">
-                            <button class="btn btn-light rounded">Hire Me!</button>
+                            <button class="btn btn-light rounded">Contact me!</button>
                         </div>
                     </div>
                 </div> 
