--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-W79MZH364V');
+  gtag('config', 'G-W79MZH364V'):
 </script>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
