--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Research">Service</a>
+                        <a class="nav-link" href="#Research">Research</a>
                     </li>                   
                     <li class="nav-item">
                         <a class="nav-link" href="#portfolio">Portfolio</a>
