--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p>Ph.D., Postdoctoral Researcher at UNIST</p>
 
                 <div class="buttons pt-3">
-                    <button class="btn btn-primary rounded">DOWNLOAD CV</button>
+                    <button id="download-btn" class="btn btn-primary rounded">DOWNLOAD CV</button>
                 </div>      
             </div>              
             <div class="img-holder">
