--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         <i class="ti-email"></i>
                         <div class="mb-0">
                             <h5>Email Address</h5>
-                            <p>info@website.com</p>
+                            <p>j.rex4860@gmail.com</p>
                         </div>
                     </div>
                 </div>                  
@@ -360,7 +360,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-sm-6">
-                    <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com" target="_blank">DevCRUD</a></p>
+                    <p>©2025 Yeonwoo Jang</p>
                 </div>
                 <div class="col-sm-6">
                     <div class="socials">
