--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Contact</h6>
             <h6 class="section-title mb-4">Get In Touch With Me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">Feel free to get in touch with me.</p>
 
             <div class="contact text-left">
                 <div class="form">
@@ -329,7 +329,7 @@
                         <i class="ti-location-pin"></i>
                         <div class="">
                             <h5>Location</h5>
-                            <p> 12345 Fake ST NoWhere AB Country</p>
+                            <p> 50 UNIST-gil 102-708, Eonyang-eup, Ulju-gun, Ulsan</p>
                         </div>                          
                     </div>
                     <div class="item">
@@ -350,7 +350,7 @@
             </div>
         </div>  
         <div id="map">
-            <iframe src="https://snazzymaps.com/embed/61257"></iframe>
+            <iframe src="https://www.google.com/maps/place/UNIST+%7C+Ulsan+National+Institute+of+Science+%26+Technology/data=!3m1!4b1!4m6!3m5!1s0x35662fd1610bf9e5:0x6fba45de1824ac69!8m2!3d35.5734176!4d129.189629!16s%2Fm%2F0glrn4y?entry=ttu&g_ep=EgoyMDI1MDUxNS4wIKXMDSoASAFQAw%3D%3D"></iframe>
         </div>      
     </section>
     <!-- End of Contact Section -->
