--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             </div>
         </div>  
         <div id="map">
-            <iframe src="https://www.google.com/maps/place/UNIST+%7C+Ulsan+National+Institute+of+Science+%26+Technology/data=!3m1!4b1!4m6!3m5!1s0x35662fd1610bf9e5:0x6fba45de1824ac69!8m2!3d35.5734176!4d129.189629!16s%2Fm%2F0glrn4y?entry=ttu&g_ep=EgoyMDI1MDUxNS4wIKXMDSoASAFQAw%3D%3D"></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.201519549349!2d129.18705407583104!3d35.57341757262223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35662fd1610bf9e5%3A0x6fba45de1824ac69!2sUNIST%20%7C%20Ulsan%20National%20Institute%20of%20Science%20%26%20Technology!5e0!3m2!1sen!2skr!4v1747725315639!5m2!1sen!2skr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>      
     </section>
     <!-- End of Contact Section -->
